make navbar fixed on mobile

--- a/components/MainSection/MainSection.module.css
+++ b/components/MainSection/MainSection.module.css
@@ -1,7 +1,7 @@
 .MainSection {
   background: #fff;
   position: relative;
-  height: calc(100vh - 77px);
+  height: 100vh;
   display: flex;
   flex-direction: column;
   overflow-y: hidden;
