--- a/components/SecondaySection/SecondarySection.module.css
+++ b/components/SecondaySection/SecondarySection.module.css
@@ -1,5 +1,5 @@
 .SecondarySection {
-  padding: 1rem;
+  padding: 6.4rem 1rem 1rem 1rem;
   background: #fff;
   border-radius: 0 4px 4px 0;
   overflow: auto;
